force-app/main/default/objects/PWChrono_Employee_Exit__c/PWChrono_Employee_Exit__c.object-meta.xml
<CustomObject>
    <label>Employee Exit</label>
    <nameField>
        <displayFormat>EXIT-{0000}</displayFormat>
        <label>Exit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Exits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>