force-app/main/default/objects/PWChrono_Employee_Exit__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation</label>
    <referenceTo>PWChrono_Designation__c</referenceTo>
    <relationshipName>PWChrono_Employee_Exits</relationshipName>
    <type>Lookup</type>
</CustomField>