force-app/main/default/objects/PWChrono_Employee_Exit__c/fields/Exit_Interview_Status__c.field-meta.xml
<CustomField>
    <fullName>Exit_Interview_Status__c</fullName>
    <label>Exit Interview Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>