force-app/main/default/objects/PWChrono_Employee_Exit__c/fields/Exit_Type__c.field-meta.xml
<CustomField>
    <fullName>Exit_Type__c</fullName>
    <label>Exit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Resignation</fullName><label
        >Resignation</label><default>true</default></value>
            <value><fullName>Termination</fullName><label
        >Termination</label><default>false</default></value>
            <value><fullName>Mutual Separation</fullName><label
        >Mutual Separation</label><default>false</default></value>
            <value><fullName>Retirement</fullName><label
        >Retirement</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>