force-app/main/default/objects/PWChrono_Employee_Exit__c/fields/Final_Decision__c.field-meta.xml
<CustomField>
    <fullName>Final_Decision__c</fullName>
    <label>Final Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><label>Pending</label><default
        >true</default></value>
            <value><fullName>Accepted</fullName><label>Accepted</label><default
        >false</default></value>
            <value><fullName>Rejected</fullName><label>Rejected</label><default
        >false</default></value>
            <value><fullName>Withdrawn</fullName><label
        >Withdrawn</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>