force-app/main/default/objects/PWChrono_Employee_Exit__c/fields/Full_and_Final_Status__c.field-meta.xml
<CustomField>
    <fullName>Full_and_Final_Status__c</fullName>
    <label>Full and Final Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><label>Pending</label><default
        >true</default></value>
            <value><fullName>In Process</fullName><label
        >In Process</label><default>false</default></value>
            <value><fullName>Completed</fullName><label
        >Completed</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>