force-app/main/default/objects/PWChrono_Employee_Exit__c/fields/Reason_for_Exit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Exit__c</fullName>
    <label>Reason for Exit</label>
    <type>TextArea</type>
</CustomField>