force-app/main/default/objects/PWChrono_Employee_Exit__c/fields/Separation__c.field-meta.xml
<CustomField>
    <fullName>Separation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Separation</label>
    <referenceTo>PWChrono_Employee_Separation__c</referenceTo>
    <relationshipName>Employee_Exits</relationshipName>
    <type>Lookup</type>
</CustomField>